--- a/deployment/clusterrole.yaml
+++ b/deployment/clusterrole.yaml
@@ -1,14 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: kube-latency
-  namespace: kube-latency
 rules:
 - apiGroups:
   - ""
   resources:
-  - pods
-  - services
+  - nodes
   verbs:
   - get
   - list
