--- a/deployment/pod.yaml
+++ b/deployment/pod.yaml
@@ -24,3 +24,19 @@ spec:
       limits:
         cpu: 250m
         memory: 256Mi
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-egress-debug
+  namespace: kube-latency
+  labels:
+    app.kubernetes.io/name: kube-latency
+spec:
+  podSelector:
+    matchLabels:
+      app.kubernetes.io/name: debug-pod
+  policyTypes:
+  - Egress
+  egress:
+  - {}
