--- a/deployment/daemonset.yaml
+++ b/deployment/daemonset.yaml
@@ -50,7 +50,7 @@ spec:
         resources:
             limits:
               ephemeral-storage: 1Mi
-              cpu: 1
+              # cpu: 1
               memory: 1024Mi
             requests:
               ephemeral-storage: 0Mi
