--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -12,8 +12,8 @@ spec:
   clusterIP: None
   ports:
   - port: 8080
-    targetPort: 8080
+    targetPort: http
     protocol: TCP
-    name: metrics
+    name: http
   selector:
     app.kubernetes.io/name: kube-latency
